added videos to automation page

--- a/automation.html
+++ b/automation.html
@@ -155,9 +155,14 @@
 				<div class="carousel-item active">
 					<div class="row">
 						<div class="col col-left-video">
+							<!-- video -->
 							<a class="venobox" data-autoplay="true" data-vbtype="video" href="https://youtu.be/7Vm3HTmoxm0">
-								<img src="images/services-page/video-thumbnail.png" alt="" class="venobox-placeholder-image w-100">
-							  </a>
+								<!-- placeholder image -->
+								<img src="images/automation-page/video-placeholder.png" alt="" class="venobox-placeholder-image w-100 h-100">
+
+								<!-- play icon -->
+								<i class="fa-regular fa-circle-play play-button"></i>
+							</a>
 						</div>
 						<div class="col-12 col-lg-6 col-right-text d-flex flex-column justify-content-center align-items-start">
 							<h2 class="automation-feature-header">1. Discover our end-of-line packaging solutions</h2>
@@ -167,44 +172,67 @@
 					</div>
 				  </div>
 
-			  <div class="carousel-item">
-				  <div class="row row-eq-height">
-					  <div class="col-12 col-lg-6 col-left-video">
-						  <iframe class="w-100 h-100" src="https://www.youtube.com/embed/Ay6UTgOP26g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-					  </div>
-					  <div class="col-12 col-lg-6 col-right-text d-flex flex-column justify-content-center align-items-start">
-						<h2 class="automation-feature-header">2. Discover our end-of-line packaging solutions</h2>
-						<div class="divider-dash-white"></div> 
-						<p class="automation-feature-description">See the advantages of turn-key installation, one-supplier convenience, and product versatility.</p>
-					  </div>
+				  <div class="carousel-item">
+					<div class="row">
+						<div class="col col-left-video">
+							<!-- video -->
+							<a class="venobox" data-autoplay="true" data-vbtype="video" href="https://youtu.be/7Vm3HTmoxm0">
+								<!-- placeholder image -->
+								<img src="images/automation-page/video-placeholder.png" alt="" class="venobox-placeholder-image w-100 h-100">
+
+								<!-- play icon -->
+								<i class="fa-regular fa-circle-play play-button"></i>
+							</a>
+						</div>
+						<div class="col-12 col-lg-6 col-right-text d-flex flex-column justify-content-center align-items-start">
+							<h2 class="automation-feature-header">2. Discover our end-of-line packaging solutions</h2>
+							<div class="divider-dash-white"></div> 
+							<p class="automation-feature-description">See the advantages of turn-key installation, one-supplier convenience, and product versatility.</p>
+						  </div>
+					</div>
 				  </div>
-			  </div>
 
-			  <div class="carousel-item">
-				<div class="row">
-					<div class="col col-left-video">
-						<iframe class="w-100 h-100" height="400" src="https://www.youtube.com/embed/TuTmrHF_tOI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-					</div>
-					<div class="col-12 col-lg-6 col-right-text d-flex flex-column justify-content-center align-items-start">
-						<h2 class="automation-feature-header">3. Discover our end-of-line packaging solutions</h2>
-						<div class="divider-dash-white"></div> 
-						<p class="automation-feature-description">See the advantages of turn-key installation, one-supplier convenience, and product versatility.</p>
-					  </div>
-				</div>
-			  </div>
+				  <div class="carousel-item">
+					<div class="row">
+						<div class="col col-left-video">
+							<!-- video -->
+							<a class="venobox" data-autoplay="true" data-vbtype="video" href="https://youtu.be/7Vm3HTmoxm0">
+								<!-- placeholder image -->
+								<img src="images/automation-page/video-placeholder.png" alt="" class="venobox-placeholder-image w-100 h-100">
 
-			  <div class="carousel-item">
-				<div class="row">
-					<div class="col col-left-video">
-						<iframe class="w-100 h-100" height="400" src="https://www.youtube.com/embed/ujByr-41z4s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+								<!-- play icon -->
+								<i class="fa-regular fa-circle-play play-button"></i>
+							</a>
+						</div>
+						<div class="col-12 col-lg-6 col-right-text d-flex flex-column justify-content-center align-items-start">
+							<h2 class="automation-feature-header">3. Discover our end-of-line packaging solutions</h2>
+							<div class="divider-dash-white"></div> 
+							<p class="automation-feature-description">See the advantages of turn-key installation, one-supplier convenience, and product versatility.</p>
+						  </div>
 					</div>
-					<div class="col-12 col-lg-6 col-right-text d-flex flex-column justify-content-center align-items-start">
-						<h2 class="automation-feature-header">4. Discover our end-of-line packaging solutions</h2>
-						<div class="divider-dash-white"></div> 
-						<p class="automation-feature-description">See the advantages of turn-key installation, one-supplier convenience, and product versatility.</p>
-					  </div>
-				</div>
-			  </div>
+				  </div>
+
+				  <div class="carousel-item">
+					<div class="row">
+						<div class="col col-left-video">
+							<!-- video -->
+							<a class="venobox" data-autoplay="true" data-vbtype="video" href="https://youtu.be/7Vm3HTmoxm0">
+								<!-- placeholder image -->
+								<img src="images/automation-page/video-placeholder.png" alt="" class="venobox-placeholder-image w-100 h-100">
+
+								<!-- play icon -->
+								<i class="fa-regular fa-circle-play play-button"></i>
+							</a>
+						</div>
+						<div class="col-12 col-lg-6 col-right-text d-flex flex-column justify-content-center align-items-start">
+							<h2 class="automation-feature-header">4. Discover our end-of-line packaging solutions</h2>
+							<div class="divider-dash-white"></div> 
+							<p class="automation-feature-description">See the advantages of turn-key installation, one-supplier convenience, and product versatility.</p>
+						  </div>
+					</div>
+				  </div>
+
+			  
 
 			</div>
 
