--- a/pages-industries/metals.html
+++ b/pages-industries/metals.html
@@ -13,7 +13,7 @@
 		<script src="https://kit.fontawesome.com/065b6a01b6.js" crossorigin="anonymous"></script>
 
 		<!-- external stylesheet -->
-		<link rel="stylesheet" href="../css/styles-applications-page.css" />
+		<link rel="stylesheet" href="/css/styles-applications-page.css" />
 
 		<!-- JQuery -->
         <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
@@ -22,9 +22,9 @@
 
         <script>
             $(function(){
-                $('#navbar-one').load('../partials/navbar-one.html');
-                $('#navbar-two').load('../partials/navbar-two.html');
-                $('#footer').load('../partials/footer.html');
+                $('#navbar-one').load('/partials/navbar-one.html');
+                $('#navbar-two').load('/partials/navbar-two.html');
+                $('#footer').load('/partials/footer.html');
             });
         </script>
     </head>
@@ -84,7 +84,7 @@
 			  <!-- Gallery item -->
 			  <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
 				<div class="bg-white rounded shadow-sm application-button">
-					<a href=""><img src="../images/metals-page/cold-coil.svg" alt="" href="" class="img-fluid card-img-top"></a>
+					<a href=""><img src="/images/industries-page/metals-page/cold-coil.svg" alt="" href="" class="img-fluid card-img-top"></a>
 				  <div class="p-4">
 					<h5> <a href="#" class="gallery-text">Cold Coil</a></h5>
 				  </div>
@@ -94,7 +94,7 @@
 			  <!-- Gallery item -->
 			  <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
 				  <div class="bg-white rounded shadow-sm application-button">
-					  <a href=""><img src="../images/metals-page/hot-coil.svg" alt="" href="" class="img-fluid card-img-top"></a>
+					  <a href=""><img src="/images/industries-page/metals-page/hot-coil.svg" alt="" href="" class="img-fluid card-img-top"></a>
 					<div class="p-4">
 					  <h5> <a href="#" class="gallery-text">Hot Coil</a></h5>
 					</div>
@@ -105,7 +105,7 @@
 				<!-- Gallery item -->
 				<div class="col-xl-3 col-lg-4 col-md-6 mb-4">
 					<div class="bg-white rounded shadow-sm application-button">
-						<a href=""><img src="../images/metals-page/non-ferrous-extruders.svg" alt="" href="" class="img-fluid card-img-top"></a>
+						<a href=""><img src="/images/industries-page/metals-page/non-ferrous-extruders.svg" alt="" href="" class="img-fluid card-img-top"></a>
 					  <div class="p-4">
 						<h5> <a href="#" class="gallery-text">Non Ferrous Extruders</a></h5>
 					  </div>
@@ -116,9 +116,9 @@
 				  <!-- Gallery item -->
 			  <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
 				  <div class="bg-white rounded shadow-sm application-button">
-					  <a href=""><a href=""><img src="../images/metals-page/non-ferrous-smelters.svg" alt="" href="" class="img-fluid card-img-top"></a>
+					  <a href=""><a href=""><img src="/images/industries-page/metals-page/non-ferrous-smelters.svg" alt="" href="" class="img-fluid card-img-top"></a>
 					<div class="p-4">
-					  <h5> <a href="#" class="gallery-text">Non Ferroous Smelters, Ingots</a></h5>
+					  <h5> <a href="#" class="gallery-text">Non Ferrous Smelters, Ingots</a></h5>
 					</div>
 				  </div>
 				</div>
@@ -126,7 +126,7 @@
 				<!-- Gallery item -->
 				<div class="col-xl-3 col-lg-4 col-md-6 mb-4">
 					<div class="bg-white rounded shadow-sm application-button">
-						<a href="specific-products.html"><img src="../images/metals-page/rod-wire.svg" alt="" class="img-fluid card-img-top"></a>
+						<a href="specific-products.html"><img src="/images/industries-page/metals-page/rod-wire.svg" alt="" class="img-fluid card-img-top"></a>
 					  <div class="p-4">
 						<h5> <a href="specific-products.html" class="gallery-text">Rod Wire</a></h5>
 					  </div>
@@ -137,7 +137,7 @@
 				  <!-- Gallery item -->
 			  <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
 				<div class="bg-white rounded shadow-sm application-button">
-					<a href=""><img src="../images/metals-page/service-centers.svg" alt="" href="" class="img-fluid card-img-top"></a>
+					<a href=""><img src="/images/industries-page/metals-page/service-centers.svg" alt="" href="" class="img-fluid card-img-top"></a>
 				  <div class="p-4">
 					<h5> <a href="#" class="gallery-text">Service Centers</a></h5>
 				  </div>
@@ -147,7 +147,7 @@
 			  <!-- Gallery item -->
 			  <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
 				  <div class="bg-white rounded shadow-sm application-button">
-					  <a href=""><img src="../images/metals-page/sheet.svg" alt="" href="" class="img-fluid card-img-top"></a>
+					  <a href=""><img src="/images/industries-page/metals-page/sheet.svg" alt="" href="" class="img-fluid card-img-top"></a>
 					<div class="p-4">
 					  <h5> <a href="#" class="gallery-text">Sheet</a></h5>
 					</div>
@@ -158,7 +158,7 @@
 					  <!-- Gallery item -->
 			  <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
 				  <div class="bg-white rounded shadow-sm application-button">
-					  <a href=""><img src="../images/metals-page/tube-bar.svg" alt="" href="" class="img-fluid card-img-top"></a>
+					  <a href=""><img src="/images/industries-page/metals-page/tube-bar.svg" alt="" href="" class="img-fluid card-img-top"></a>
 					<div class="p-4">
 					  <h5> <a href="#" class="gallery-text">Tube Bar</a></h5>
 					</div>
