--- a/pages-industries/beverage.html
+++ b/pages-industries/beverage.html
@@ -52,7 +52,7 @@
 				<!-- breadcrumb -->
 				  <nav aria-label="breadcrumb">
 					<ol class="breadcrumb">
-					  <li class="breadcrumb-item"><a href="../industries.html">Industries</a></li>
+					  <li class="breadcrumb-item"><a href="/industries.html">Industries</a></li>
 					  <li class="breadcrumb-item active" aria-current="page"><a><b>Beverage</b></a></li>
 					</ol>
 				  </nav>
