--- a/pages-industries/metals.html
+++ b/pages-industries/metals.html
@@ -52,7 +52,7 @@
 				<!-- breadcrumb -->
 				  <nav aria-label="breadcrumb">
 					<ol class="breadcrumb">
-					  <li class="breadcrumb-item"><a href="industries.html">Industries</a></li>
+					  <li class="breadcrumb-item"><a href="/industries.html">Industries</a></li>
 					  <li class="breadcrumb-item active" aria-current="page"><a><b>Metals</b></a></li>
 					</ol>
 				  </nav>
@@ -84,9 +84,9 @@
 			  <!-- Gallery item -->
 			  <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
 				<div class="bg-white rounded shadow-sm application-button">
-					<a href=""><img src="/images/industries-page/metals-page/cold-coil.svg" alt="" href="" class="img-fluid card-img-top"></a>
+					<a href="/pages-industries/pages-metals/cold-coil.html"><img src="/images/industries-page/metals-page/cold-coil.svg" alt="" href="" class="img-fluid card-img-top"></a>
 				  <div class="p-4">
-					<h5> <a href="#" class="gallery-text">Cold Coil</a></h5>
+					<h5> <a href="/pages-industries/pages-metals/cold-coil.html" class="gallery-text">Cold Coil</a></h5>
 				  </div>
 				</div>
 			  </div>
@@ -94,9 +94,9 @@
 			  <!-- Gallery item -->
 			  <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
 				  <div class="bg-white rounded shadow-sm application-button">
-					  <a href=""><img src="/images/industries-page/metals-page/hot-coil.svg" alt="" href="" class="img-fluid card-img-top"></a>
+					  <a href="/pages-industries/pages-metals/hot-coil.html"><img src="/images/industries-page/metals-page/hot-coil.svg" alt="" href="" class="img-fluid card-img-top"></a>
 					<div class="p-4">
-					  <h5> <a href="#" class="gallery-text">Hot Coil</a></h5>
+					  <h5> <a href="/pages-industries/pages-metals/hot-coil.html" class="gallery-text">Hot Coil</a></h5>
 					</div>
 				  </div>
 				</div>
@@ -105,9 +105,9 @@
 				<!-- Gallery item -->
 				<div class="col-xl-3 col-lg-4 col-md-6 mb-4">
 					<div class="bg-white rounded shadow-sm application-button">
-						<a href=""><img src="/images/industries-page/metals-page/non-ferrous-extruders.svg" alt="" href="" class="img-fluid card-img-top"></a>
+						<a href="/pages-industries/pages-metals/non-ferrous-extruders.html"><img src="/images/industries-page/metals-page/non-ferrous-extruders.svg" alt="" href="" class="img-fluid card-img-top"></a>
 					  <div class="p-4">
-						<h5> <a href="#" class="gallery-text">Non Ferrous Extruders</a></h5>
+						<h5> <a href="/pages-industries/pages-metals/non-ferrous-extruders.html" class="gallery-text">Non Ferrous Extruders</a></h5>
 					  </div>
 					</div>
 				  </div>
@@ -116,9 +116,9 @@
 				  <!-- Gallery item -->
 			  <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
 				  <div class="bg-white rounded shadow-sm application-button">
-					  <a href=""><a href=""><img src="/images/industries-page/metals-page/non-ferrous-smelters.svg" alt="" href="" class="img-fluid card-img-top"></a>
+					  <a href="/pages-industries/pages-metals/non-ferrous-smelters-ingots.html"><a href=""><img src="/images/industries-page/metals-page/non-ferrous-smelters.svg" alt="" href="" class="img-fluid card-img-top"></a>
 					<div class="p-4">
-					  <h5> <a href="#" class="gallery-text">Non Ferrous Smelters, Ingots</a></h5>
+					  <h5> <a href="/pages-industries/pages-metals/non-ferrous-smelters-ingots.html" class="gallery-text">Non Ferrous Smelters, Ingots</a></h5>
 					</div>
 				  </div>
 				</div>
@@ -126,9 +126,9 @@
 				<!-- Gallery item -->
 				<div class="col-xl-3 col-lg-4 col-md-6 mb-4">
 					<div class="bg-white rounded shadow-sm application-button">
-						<a href="specific-products.html"><img src="/images/industries-page/metals-page/rod-wire.svg" alt="" class="img-fluid card-img-top"></a>
+						<a href="/pages-industries/pages-metals/rod-wire.html"><img src="/images/industries-page/metals-page/rod-wire.svg" alt="" class="img-fluid card-img-top"></a>
 					  <div class="p-4">
-						<h5> <a href="specific-products.html" class="gallery-text">Rod Wire</a></h5>
+						<h5> <a href="/pages-industries/pages-metals/rod-wire.html" class="gallery-text">Rod Wire</a></h5>
 					  </div>
 					</div>
 				  </div>
@@ -137,9 +137,9 @@
 				  <!-- Gallery item -->
 			  <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
 				<div class="bg-white rounded shadow-sm application-button">
-					<a href=""><img src="/images/industries-page/metals-page/service-centers.svg" alt="" href="" class="img-fluid card-img-top"></a>
+					<a href="/pages-industries/pages-metals/service-centers.html"><img src="/images/industries-page/metals-page/service-centers.svg" alt="" href="" class="img-fluid card-img-top"></a>
 				  <div class="p-4">
-					<h5> <a href="#" class="gallery-text">Service Centers</a></h5>
+					<h5> <a href="/pages-industries/pages-metals/service-centers.html" class="gallery-text">Service Centers</a></h5>
 				  </div>
 				</div>
 			  </div>
@@ -147,9 +147,9 @@
 			  <!-- Gallery item -->
 			  <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
 				  <div class="bg-white rounded shadow-sm application-button">
-					  <a href=""><img src="/images/industries-page/metals-page/sheet.svg" alt="" href="" class="img-fluid card-img-top"></a>
+					  <a href="/pages-industries/pages-metals/sheet.html"><img src="/images/industries-page/metals-page/sheet.svg" alt="" href="" class="img-fluid card-img-top"></a>
 					<div class="p-4">
-					  <h5> <a href="#" class="gallery-text">Sheet</a></h5>
+					  <h5> <a href="/pages-industries/pages-metals/sheet.html" class="gallery-text">Sheet</a></h5>
 					</div>
 				  </div>
 				</div>
@@ -158,9 +158,9 @@
 					  <!-- Gallery item -->
 			  <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
 				  <div class="bg-white rounded shadow-sm application-button">
-					  <a href=""><img src="/images/industries-page/metals-page/tube-bar.svg" alt="" href="" class="img-fluid card-img-top"></a>
+					  <a href="/pages-industries/pages-metals/tube-bar.html"><img src="/images/industries-page/metals-page/tube-bar.svg" alt="" href="" class="img-fluid card-img-top"></a>
 					<div class="p-4">
-					  <h5> <a href="#" class="gallery-text">Tube Bar</a></h5>
+					  <h5> <a href="/pages-industries/pages-metals/tube-bar.html" class="gallery-text">Tube Bar</a></h5>
 					</div>
 				  </div>
 				</div>
