--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<script src="https://kit.fontawesome.com/065b6a01b6.js" crossorigin="anonymous"></script>
 
 		<!-- external stylesheet -->
-		<link rel="stylesheet" href="css/styles-home-page.css" />
+		<link rel="stylesheet" href="/css/styles-home-page.css" />
 
 		<!-- JQuery -->
 		<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
@@ -23,9 +23,9 @@
 		<!-- load partials -->
 		<script>
 			$(function(){
-				$('#navbar-one').load('partials/navbar-one.html');
-				$('#navbar-two').load('partials/navbar-two.html');
-				$('#footer').load('partials/footer.html');
+				$('#navbar-one').load('/partials/navbar-one.html');
+				$('#navbar-two').load('/partials/navbar-two.html');
+				$('#footer').load('/partials/footer.html');
 			});
 
 		</script>
@@ -45,7 +45,7 @@
 		
 		<!-- ******************************* HERO BANNER ************************************** -->
 
-		<div class="bg-image p-5 text-left shadow-1-strong mb-5 text-white d-flex" style="background-image: url('../images/home-page/background-image.png'); height: 700px;">
+		<div class="bg-image p-5 text-left shadow-1-strong mb-5 text-white d-flex" style="background-image: url('/images/home-page/background-image.png'); height: 700px;">
 			<div class="container banner-text align-self-center my-auto">
 				<h1>WE'LL <span style="color: #b43c25">PROTECT</span> IT FROM HERE.</h1>
 				<div class="banner-divider-dash"></div> 
@@ -87,7 +87,7 @@
 
                 <!-- image -->
                 <div class="col-md-5 order-md-1">
-                    <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto rounded" src="images/home-page/what-we-do.jpg" width="500" height="500" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"></img>
+                    <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto rounded" src="/images/home-page/what-we-do.jpg" width="500" height="500" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"></img>
                 </div>
             </div>
 
@@ -119,7 +119,7 @@
 
                 <!-- image -->
                 <div class="col-md-5 order-md-3">
-                    <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto rounded" src="images/home-page/why-signode.jpg" width="500" height="500" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"></img>
+                    <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto rounded" src="/images/home-page/why-signode.jpg" width="500" height="500" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"></img>
                 </div>
             </div>
 		</div>
@@ -144,7 +144,7 @@
             <div class="row align-items-start">
                 <div class="col-sm-12 col-md">
                     <!-- icon -->
-                    <img src="images/home-page/process.png" class="process-icon mx-auto d-block" alt="">
+                    <img src="/images/home-page/process.png" class="process-icon mx-auto d-block" alt="">
 
                     <!-- heading and text -->
                     <h3 class="text-center"><b>pack</b></h3>
@@ -153,7 +153,7 @@
 
                 <div class="col-sm-12 col-md">
                     <!-- icon -->
-                    <img src="images/home-page/process.png" class="process-icon mx-auto d-block" alt="">
+                    <img src="/images/home-page/process.png" class="process-icon mx-auto d-block" alt="">
 
                     <!-- heading and text -->
                     <h3 class="text-center"><b>bundle</b></h3>
@@ -162,7 +162,7 @@
 
 				<div class="col-sm-12 col-md">
                     <!-- icon -->
-                    <img src="images/home-page/process.png" class="process-icon mx-auto d-block" alt="">
+                    <img src="/images/home-page/process.png" class="process-icon mx-auto d-block" alt="">
 
                     <!-- heading and text -->
                     <h3 class="text-center"><b>unitize</b></h3>
@@ -171,7 +171,7 @@
 
 				<div class="col-sm-12 col-md">
                     <!-- icon -->
-                    <img src="images/home-page/process.png" class="process-icon mx-auto d-block" alt="">
+                    <img src="/images/home-page/process.png" class="process-icon mx-auto d-block" alt="">
 
                     <!-- heading and text -->
                     <h3 class="text-center"><b>warehouse</b></h3>
@@ -180,7 +180,7 @@
 
 				<div class="col-sm-12 col-md">
                     <!-- icon -->
-                    <img src="images/home-page/process.png" class="process-icon mx-auto d-block" alt="">
+                    <img src="/images/home-page/process.png" class="process-icon mx-auto d-block" alt="">
 
                     <!-- heading and text -->
                     <h3 class="text-center"><b>transport</b></h3>
@@ -353,16 +353,6 @@
 	  </div>
  
 		<br><br><br>
-
-
-
-		<!-- ******************************* TESTIMONIALS ************************************** -->
-
-
-
-
-
-
 
 
 		<br><br><br>
