--- a/pages-industries/bagged-products.html
+++ b/pages-industries/bagged-products.html
@@ -13,7 +13,7 @@
 		<script src="https://kit.fontawesome.com/065b6a01b6.js" crossorigin="anonymous"></script>
 
 		<!-- external stylesheet -->
-		<link rel="stylesheet" href="../css/styles-applications-page.css" />
+		<link rel="stylesheet" href="/css/styles-applications-page.css" />
 
 		<!-- JQuery -->
         <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
@@ -22,9 +22,9 @@
 
         <script>
             $(function(){
-                $('#navbar-one').load('../partials/navbar-one.html');
-                $('#navbar-two').load('../partials/navbar-two.html');
-                $('#footer').load('../partials/footer.html');
+                $('#navbar-one').load('/partials/navbar-one.html');
+                $('#navbar-two').load('/partials/navbar-two.html');
+                $('#footer').load('/partials/footer.html');
             });
         </script>
     </head>
@@ -52,7 +52,7 @@
 				<!-- breadcrumb -->
 				  <nav aria-label="breadcrumb">
 					<ol class="breadcrumb">
-					  <li class="breadcrumb-item"><a href="../industries.html">Industries</a></li>
+					  <li class="breadcrumb-item"><a href="/industries.html">Industries</a></li>
 					  <li class="breadcrumb-item active" aria-current="page"><a><b>Bagged Products</b></a></li>
 					</ol>
 				  </nav>
