organizing files progress

--- a/pages-industries/pages-metals/cold-coil.html
+++ b/pages-industries/pages-metals/cold-coil.html
@@ -83,6 +83,28 @@
 		<div class="container content-row" id="specific-products-section">
 			<div class="row gy-4">
 				<div class="col-xl-6 mb-3">
+					<div class="card flex-row mb-4 box-shadow h-100">
+						<div class="card-body d-flex flex-column align-items-stretch">
+							<h3>
+								<a class="text-dark" href="product-details.html">Apex® Steel Strapping</a>
+							</h3>
+							<p class="card-text mb-auto">Apex and Apex Plus steel strapping are cold rolled, non-heat treated, low carbon strapping manufactured with superior edge conditioning with excellent coating and surface properties. </p>
+						</div>
+						<a href="product-details.html"><img class="card-img-right w-100" src="/images/apex-steel-strapping.png" alt=""></a>
+					</div>
+				</div>
+				<div class="col-xl-6 mb-3">
+					<div class="card flex-row mb-4 box-shadow h-100">
+						<div class="card-body d-flex flex-column align-items-stretch">
+							<h3>
+								<a class="text-dark" href="#">Magnus®</a>
+							</h3>
+							<p class="card-text mb-auto">Magnus is a cold-rolled, heat-treated steel strapping that provides high tensile strength and shock resistance for the heaviest-duty applications.</p>
+						</div>
+						<a href="product-details.html"><img class="card-img-right w-100" src="/images/apex-steel-strapping.png" alt=""></a>
+					</div>
+				</div>
+				<div class="col-xl-6 mb-3">
 					<div class="card flex-md-row mb-4 box-shadow h-100">
 						<div class="card-body d-flex flex-column align-items-stretch">
 							<h3>
@@ -90,7 +112,7 @@
 							</h3>
 							<p class="card-text mb-auto">Apex and Apex Plus steel strapping are cold rolled, non-heat treated, low carbon strapping manufactured with superior edge conditioning with excellent coating and surface properties. </p>
 						</div>
-						<a href="product-details.html"><img class="card-img-right flex-auto w-100" src="/images/apex-steel-strapping.png" alt="Card image cap"></a>
+						<a href="product-details.html"><img class="card-img-right w-100" src="/images/apex-steel-strapping.png" alt=""></a>
 					</div>
 				</div>
 				<div class="col-xl-6 mb-3">
@@ -101,29 +123,7 @@
 							</h3>
 							<p class="card-text mb-auto">Magnus is a cold-rolled, heat-treated steel strapping that provides high tensile strength and shock resistance for the heaviest-duty applications.</p>
 						</div>
-						<a href="product-details.html"><img class="card-img-right flex-auto w-100" src="/images/apex-steel-strapping.png" alt="Card image cap"></a>
-					</div>
-				</div>
-				<div class="col-xl-6 mb-3">
-					<div class="card flex-md-row mb-4 box-shadow h-100">
-						<div class="card-body d-flex flex-column align-items-stretch">
-							<h3>
-								<a class="text-dark" href="product-details.html">Apex® Steel Strapping</a>
-							</h3>
-							<p class="card-text mb-auto">Apex and Apex Plus steel strapping are cold rolled, non-heat treated, low carbon strapping manufactured with superior edge conditioning with excellent coating and surface properties. </p>
-						</div>
-						<a href="product-details.html"><img class="card-img-right flex-auto w-100" src="/images/apex-steel-strapping.png" alt="Card image cap"></a>
-					</div>
-				</div>
-				<div class="col-xl-6 mb-3">
-					<div class="card flex-md-row mb-4 box-shadow h-100">
-						<div class="card-body d-flex flex-column align-items-stretch">
-							<h3>
-								<a class="text-dark" href="#">Magnus®</a>
-							</h3>
-							<p class="card-text mb-auto">Magnus is a cold-rolled, heat-treated steel strapping that provides high tensile strength and shock resistance for the heaviest-duty applications.</p>
-						</div>
-						<a href="product-details.html"><img class="card-img-right flex-auto w-100" src="/images/apex-steel-strapping.png" alt="Card image cap"></a>
+						<a href="product-details.html"><img class="card-img-right w-100" src="/images/apex-steel-strapping.png" alt=""></a>
 					</div>
 				</div>
 		  </div>
