--- a/solutions.html
+++ b/solutions.html
@@ -66,27 +66,28 @@
 				<div class="row align-items-start">
 					<div class="col-sm-12 col-md mt-4 mb-4">
 						<!-- icon -->
-						<img src="/images/home-page/process.png" class="process-icon mx-auto d-block" alt="">
+						<a href="/pages-solutions/pack.html"><img src="/images/home-page/process.png" class="process-icon mx-auto d-block" alt=""></a>
 
 						<!-- heading and text -->
-						<h3 class="text-center"><b>pack</b></h3>
+						<a href="/pages-solutions/pack.html"><h3 class="text-center"><b>pack</b></h3></a>
 					</div>
 
 					<div class="col-sm-12 col-md mt-4 mb-4">
 						<!-- icon -->
-						<img src="/images/home-page/process.png" class="process-icon mx-auto d-block" alt="">
+						<a href="/pages-solutions/unitize.html"><img src="/images/home-page/process.png" class="process-icon mx-auto d-block" alt=""></a>
 
 						<!-- heading and text -->
-						<h3 class="text-center"><b>unitize</b></h3>
+						<a href="/pages-solutions/unitize.html"><h3 class="text-center"><b>unitize</b></h3></a>
 					</div>
 
 					<div class="col-sm-12 col-md mt-4 mb-4">
 						<!-- icon -->
-						<img src="/images/home-page/process.png" class="process-icon mx-auto d-block" alt="">
+						<a href="/pages-solutions/transport.html"><img src="/images/home-page/process.png" class="process-icon mx-auto d-block" alt=""></a>
 
 						<!-- heading and text -->
-						<h3 class="text-center"><b>transport</b></h3>
+						<a href="/pages-solutions/transport.html"><h3 class="text-center"><b>transport</b></h3></a>
 					</div>
+
 
 					<div class="col-sm-12 col-md">
 						<!-- filler column -->
@@ -105,18 +106,18 @@
 				<div class="row align-items-start">
 					<div class="col-sm-12 col-md mt-4 mb-4">
 						<!-- icon -->
-						<img src="/images/home-page/process.png" class="process-icon mx-auto d-block" alt="">
+						<a href="/pages-solutions/bundle.html"><img src="/images/home-page/process.png" class="process-icon mx-auto d-block" alt=""></a>
 
 						<!-- heading and text -->
-						<h3 class="text-center"><b>bundle</b></h3>
+						<a href="/pages-solutions/bundle.html"><h3 class="text-center"><b>bundle</b></h3></a>
 					</div>
 
 					<div class="col-sm-12 col-md mt-4 mb-4">
 						<!-- icon -->
-						<img src="/images/home-page/process.png" class="process-icon mx-auto d-block" alt="">
+						<a href="/pages-solutions/warehouse.html"><img src="/images/home-page/process.png" class="process-icon mx-auto d-block" alt=""></a>
 
 						<!-- heading and text -->
-						<h3 class="text-center"><b>warehouse</b></h3>
+						<a href="/pages-solutions/warehouse.html"><h3 class="text-center"><b>warehouse</b></h3></a>
 					</div>
 
 					<div class="col-sm-12 col-md">
