--- a/index.html
+++ b/index.html
@@ -360,14 +360,14 @@
 		<br><br><br>
 
 
-		<!-- ******************************* ANIMATED STATS ************************************** -->
+		<!-- ******************************* STATS ************************************** -->
 		
 		<div id="stats">
 			<div class="container">
 			  <div class="row d-flex align-items-start">
 				<div class="col-12 col-md d-flex flex-column justify-content-center">
 					<div class="d-flex justify-content-center">
-						<span class="value stats-heading" end_val="80">0</span>
+						<span class="value stats-heading">80</span>
 						<span class="stats-heading">+</span><br>
 					</div>
 				  <span class="stats-subheading text-center">Manufacturing facilities worldwide</span>
@@ -375,7 +375,7 @@
 
 				<div class="col-12 col-md d-flex flex-column justify-content-center">
 					<div class="d-flex justify-content-center">
-						<span class="value stats-heading" end_val="100">0</span>
+						<span class="value stats-heading">9000</span>
 						<span class="stats-heading">+</span><br>
 					</div>
 				  <span class="stats-subheading text-center">Employees</span>
@@ -383,7 +383,7 @@
 
 				<div class="col-12 col-md d-flex flex-column justify-content-center">
 					<div class="d-flex justify-content-center">
-						<span class="value stats-heading" end_val="35">0</span>
+						<span class="value stats-heading">35</span>
 						<span class="stats-heading">+</span><br>
 					</div>
 					<span class="stats-subheading text-center">Valued packaging brands</span>
@@ -392,17 +392,16 @@
 
 				<div class="col-12 col-md d-flex flex-column justify-content-center">
 					<div class="d-flex justify-content-center">
-						<span class="value stats-heading" end_val="2">0</span>
+						<span class="value stats-heading">$2</span>
 						<span class="stats-heading">+</span><br>
 					</div>
-					<span class="stats-subheading text-center">Billion dollars in revenue</span>
+					<span class="stats-subheading text-center">Billion in revenue</span>
 
 				</div>
 
 				<div class="col-12 col-md d-flex flex-column justify-content-center">
 					<div class="d-flex justify-content-center">
-						<span class="value stats-heading" end_val="6">0</span>
-						<span class="stats-heading">+</span><br>
+						<span class="value stats-heading">6</span>
 					</div>
 					<span class="stats-subheading text-center">Continents across the globe</span>
 				</div>
@@ -608,8 +607,6 @@
 		<!-- Bootstrap JavaScript -->
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 
-		<!-- Page specific Javascript -->
-		<script src="js/animated-stats.js"></script>
 
 	</body>
 </html>
