fixed row featurette

--- a/pages-company/careers.html
+++ b/pages-company/careers.html
@@ -13,7 +13,7 @@
 		<script src="https://kit.fontawesome.com/065b6a01b6.js" crossorigin="anonymous"></script>
 
 		<!-- external stylesheet -->
-		<link rel="stylesheet" href="../css/styles-careers-page.css" />
+		<link rel="stylesheet" href="/css/styles-careers-page.css" />
 
 		<!-- JQuery -->
         <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
@@ -22,9 +22,9 @@
 
         <script>
             $(function(){
-                $('#navbar-one').load('../partials/navbar-one.html');
-                $('#navbar-two').load('../partials/navbar-two.html');
-                $('#footer').load('../partials/footer.html');
+                $('#navbar-one').load('/partials/navbar-one.html');
+                $('#navbar-two').load('/partials/navbar-two.html');
+                $('#footer').load('/partials/footer.html');
             });
         </script>
     </head>
@@ -48,7 +48,7 @@
 		<div class="container marketing">
              <div class="row featurette">
 
-				 <div class="col-md-6 order-md-3">
+				 <div class="col-lg-6 order-lg-3 my-auto">
 					 
 					<!-- heading -->
                     <div class="featurette-heading">
@@ -62,19 +62,17 @@
                     <p class="lead text-content">With over $2B in revenue, 80+ manufacturing facilities across 6 continents, and over 7,000 employees worldwide, Signode is a leading manufacturer of transit packaging consumables, tools, software, and equipment that optimize end-of line packaging operations and protect products in transit. 
 					<br><br>
 					From operations and manufacturing experts to sales and marketing pros, we always are on the lookout for top talent.</p>
-                
+                    <br>
                 </div>
 
                 <!-- column for spacing -->
-                <div class="empty-column col-md-1 order-md-2"></div>
+                <div class="empty-column col-lg-1 order-lg-2"></div>
 
                 <!-- image -->
-                <div class="col-md-5 order-md-1">
-                    <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto rounded" src="../images/careers-page/careers.jpg" width="500" height="500" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"></img>
+                <div class="col-lg-5 order-lg-1">
+                    <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto rounded" src="../images/careers-page/careers.jpg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"></img>
                 </div>
             </div>
-
-			
 		</div>
 
 		
