--- a/pages-solutions/services.html
+++ b/pages-solutions/services.html
@@ -13,24 +13,24 @@
 		<script src="https://kit.fontawesome.com/065b6a01b6.js" crossorigin="anonymous"></script>
 
 		<!-- external stylesheet -->
-		<link rel="stylesheet" href="css/styles-services-page.css" />
+		<link rel="stylesheet" href="/css/styles-services-page.css" />
 
 		<!-- JQuery -->
         <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 
 		<!-- lightbox -->
-		<link rel="stylesheet" href="node_modules/lightbox2/dist/css/lightbox.min.css">
+		<link rel="stylesheet" href="/node_modules/lightbox2/dist/css/lightbox.min.css">
     
 		<!-- venobox -->
-		<link rel="stylesheet" href="node_modules/venobox/dist/venobox.min.css" />
+		<link rel="stylesheet" href="/node_modules/venobox/dist/venobox.min.css" />
 
         <title>Signode Canada</title>
 
         <script>
             $(function(){
-                $('#navbar-one').load('partials/navbar-one.html');
-                $('#navbar-two').load('partials/navbar-two.html');
-                $('#footer').load('partials/footer.html');
+                $('#navbar-one').load('/partials/navbar-one.html');
+                $('#navbar-two').load('/partials/navbar-two.html');
+                $('#footer').load('/partials/footer.html');
             });
         </script>
     </head>
@@ -78,7 +78,7 @@
 					<!-- video -->
 					<a class="venobox" data-autoplay="true" data-vbtype="video" href="https://youtu.be/7Vm3HTmoxm0">
 						<!-- placeholder image -->
-						<img src="images/services-page/video-thumbnail.png" alt="" class="venobox-placeholder-image w-100">
+						<img src="/images/services-page/video-thumbnail.png" alt="" class="venobox-placeholder-image w-100">
 
 						<!-- play icon -->
 						<i class="fa-regular fa-circle-play play-button"></i>
@@ -107,7 +107,7 @@
 		<div class="container">
 			<div class="row">
 			  <div class="col-12 col-lg-6 order-lg-2 service-image ">
-				  <img src="images/services-page/service.png" alt="" class="w-100 h-100">
+				  <img src="/images/services-page/service.png" alt="" class="w-100 h-100">
 			  </div>
 
 			  <div class="col-12 col-lg-6 order-lg-1 service-text">
@@ -128,7 +128,7 @@
 		<div class="container">
 			<div class="row">
 			  <div class="col-12 col-lg-6 order-lg-1 service-image">
-				  <img src="images/services-page/service.png" alt="" class="w-100 h-100">
+				  <img src="/images/services-page/service.png" alt="" class="w-100 h-100">
 			  </div>
 
 			  <div class="col-12 col-lg-6 order-lg-2 service-text">
@@ -149,7 +149,7 @@
 		<div class="container">
 			<div class="row">
 			  <div class="col-12 col-lg-6 order-lg-2 service-image">
-				  <img src="images/services-page/service.png" alt="" class="w-100 h-100">
+				  <img src="/images/services-page/service.png" alt="" class="w-100 h-100">
 			  </div>
 
 			  <div class="col-12 col-lg-6 order-lg-1 service-text">
@@ -170,7 +170,7 @@
 		<div class="container">
 			<div class="row">
 			  <div class="col-12 col-lg-6 order-lg-1 service-image">
-				  <img src="images/services-page/service.png" alt="" class="w-100 h-100">
+				  <img src="/images/services-page/service.png" alt="" class="w-100 h-100">
 			  </div>
 
 			  <div class="col-12 col-lg-6 order-lg-2 service-text">
@@ -203,19 +203,19 @@
 
 			<div class="row">
 				<div class="col-12 col-md-6 col-lg-3">
-					<img src="images/services-page/ISTAlogo.jpg" alt="" class="mx-auto d-block">
+					<img src="/images/services-page/ISTAlogo.jpg" alt="" class="mx-auto d-block">
 				</div>
 
 				<div class="col-12 col-md-6 col-lg-3">
-					<img src="images/services-page/ASTMlogo.jpg" alt="" class="mx-auto d-block">
+					<img src="/images/services-page/ASTMlogo.jpg" alt="" class="mx-auto d-block">
 				</div>
 
 				<div class="col-12 col-md-6 col-lg-3">
-					<img src="images/services-page/EumosLogo.jpg" alt="" class="mx-auto d-block">
+					<img src="/images/services-page/EumosLogo.jpg" alt="" class="mx-auto d-block">
 				</div>
 
 				<div class="col-12 col-md-6 col-lg-3">
-					<img src="images/services-page/AARlogo.jpg" alt="" class="mx-auto d-block">
+					<img src="/images/services-page/AARlogo.jpg" alt="" class="mx-auto d-block">
 				</div>
 			</div>
 			
@@ -232,10 +232,10 @@
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 
 		<!-- Lightbox js -->
-		<script src="node_modules/lightbox2/dist/js/lightbox-plus-jquery.min.js"></script>
+		<script src="/node_modules/lightbox2/dist/js/lightbox-plus-jquery.min.js"></script>
 
 		<!-- Venobox js -->
-		<script src="node_modules/venobox/dist/venobox.min.js"></script>
+		<script src="/node_modules/venobox/dist/venobox.min.js"></script>
 	
 		<!-- Venobox script -->
 		<script>
