about page photos

--- a/pages-company/about.html
+++ b/pages-company/about.html
@@ -52,8 +52,8 @@
                     
                    <!-- heading -->
                    <div class="featurette-heading">
-                       <h5 class="sub-heading">Careers</h5>
-                       <h2 class="fw-normal lh-1 main-heading">Join Our Team</h2>
+                       <h5 class="sub-heading">Company</h5>
+                       <h2 class="fw-normal lh-1 main-heading">About Us</h2>
                    </div>
 
                    <div class="divider-dash"></div> 
