--- a/pages-company/careers.html
+++ b/pages-company/careers.html
@@ -70,7 +70,7 @@
 
                 <!-- image -->
                 <div class="col-lg-5 order-lg-1">
-                    <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto rounded" src="../images/careers-page/careers.jpg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"></img>
+                    <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto rounded" src="/images/careers-page/careers.jpg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"></img>
                 </div>
             </div>
 		</div>
