--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		
 		<!-- ******************************* HERO BANNER ************************************** -->
 
-		<div class="bg-image p-5 text-left shadow-1-strong mb-5 text-white d-flex" style="background-image: url('/images/unknown.png'); height: 500px;">
+		<div class="bg-image p-5 text-left shadow-1-strong mb-5 text-white d-flex" style="background-image: url('/images/machine-background.png'); height: 500px;">
 			<div class="container banner-text align-self-center my-auto">
 				<h1>WE'LL <span style="color: #b43c25">PROTECT</span> IT FROM HERE.</h1>
 				<div class="banner-divider-dash"></div> 
