home page photos

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		
 		<!-- ******************************* HERO BANNER ************************************** -->
 
-		<div class="bg-image p-5 text-left shadow-1-strong mb-5 text-white d-flex" style="background-image: url('/images/machine-background.png'); height: 500px;">
+		<div class="bg-image p-5 text-left shadow-1-strong mb-5 text-white d-flex" style="background-image: url('/images/home-page/banner.png'); height: 500px;">
 			<div class="container banner-text align-self-center my-auto">
 				<h1>WE'LL <span style="color: #b43c25">PROTECT</span> IT FROM HERE.</h1>
 				<div class="banner-divider-dash"></div> 
@@ -93,7 +93,7 @@
 					<!-- video -->
 					<a class="venobox" data-autoplay="true" data-vbtype="video" href="https://youtu.be/7QYcUBZ4uDk">
 						<!-- placeholder image -->
-						<img src="/images/services-page/video-thumbnail.png" alt="" class="venobox-placeholder-image w-100">
+						<img src="/images/home-page/what-we-do-thumbnail.png" alt="" class="venobox-placeholder-image w-100">
 
 						<!-- play icon -->
 						<i class="fa-regular fa-circle-play play-button"></i>
@@ -126,9 +126,9 @@
 
                 <div class="col-lg-5 order-lg-3 text-center my-auto image-column">
 					<!-- video -->
-					<a class="venobox" data-autoplay="true" data-vbtype="video" href="https://youtu.be/7Vm3HTmoxm0">
+					<a class="venobox" data-autoplay="true" data-vbtype="video" href="https://youtu.be/Wg_MU71SqW0">
 						<!-- placeholder image -->
-						<img src="/images/services-page/video-thumbnail.png" alt="" class="venobox-placeholder-image w-100">
+						<img src="/images/home-page/why-signode-thumbnail.png" alt="" class="venobox-placeholder-image w-100">
 
 						<!-- play icon -->
 						<i class="fa-regular fa-circle-play play-button"></i>
@@ -136,7 +136,7 @@
                 </div>
             </div>
 
-            <br><br><br>
+            <br><br><br><br><br>
             
 		</div>
 
