finished specific products page

--- a/pages-company/about.html
+++ b/pages-company/about.html
@@ -13,7 +13,7 @@
 		<script src="https://kit.fontawesome.com/065b6a01b6.js" crossorigin="anonymous"></script>
 
 		<!-- external stylesheet -->
-		<link rel="stylesheet" href="../css/styles-about-page.css" />
+		<link rel="stylesheet" href="/css/styles-about-page.css" />
 
         <!-- JQuery -->
         <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
@@ -22,9 +22,9 @@
 
         <script>
             $(function(){
-                $('#navbar-one').load('../partials/navbar-one.html');
-                $('#navbar-two').load('../partials/navbar-two.html');
-                $('#footer').load('../partials/footer.html');
+                $('#navbar-one').load('/partials/navbar-one.html');
+                $('#navbar-two').load('/partials/navbar-two.html');
+                $('#footer').load('/partials/footer.html');
             });
         </script>
     </head>
@@ -118,7 +118,7 @@
             <div class="row align-items-start">
                 <div class="col-sm-12 col-md-6 col-lg-3">
                     <!-- icon -->
-                    <img src="../images/about-page/values-icons/innovation.svg" class="values-icons" alt=""><br>
+                    <img src="/images/about-page/values-icons/innovation.svg" class="values-icons" alt=""><br>
 
                     <!-- heading and text -->
                     <h3>Innovation</h3>
@@ -127,7 +127,7 @@
 
                 <div class="col-sm-12 col-md-6 col-lg-3">
                     <!-- icon -->
-                    <img src="../images/about-page/values-icons/adaptability.svg" class="values-icons" alt=""><br>
+                    <img src="/images/about-page/values-icons/adaptability.svg" class="values-icons" alt=""><br>
 
                     <!-- heading and text -->
                     <h3>Adaptability</h3>
@@ -136,7 +136,7 @@
 
                 <div class="col-sm-12 col-md-6 col-lg-3">
                     <!-- icon -->
-                    <img src="../images/about-page/values-icons/safety.svg" class="values-icons" alt=""><br>
+                    <img src="/images/about-page/values-icons/safety.svg" class="values-icons" alt=""><br>
 
                     <!-- heading and text -->
                     <h3>Safety</h3>
@@ -146,7 +146,7 @@
 
                 <div class="col-sm-12 col-md-6 col-lg-3">
                     <!-- icon -->
-                    <img src="../images/about-page/values-icons/sustainability.svg" class="values-icons" alt=""><br>
+                    <img src="/images/about-page/values-icons/sustainability.svg" class="values-icons" alt=""><br>
 
                     <!-- heading and text -->
                     <h3>Sustainability</h3>
@@ -173,7 +173,7 @@
             <div class="divider-dash"></div> 
             <!-- end heading -->
 
-            <img src="../images/about-page/history-timeline.svg" alt="" class="img-fluid mx-auto d-block">
+            <img src="/images/about-page/history-timeline.svg" alt="" class="img-fluid mx-auto d-block">
             <br><br>
 
         </div>
