--- a/pages-industries/pages-metals/cold-coil/product-details.html
+++ b/pages-industries/pages-metals/cold-coil/product-details.html
@@ -53,8 +53,8 @@
 				  <nav aria-label="breadcrumb">
 					<ol class="breadcrumb">
 					  <li class="breadcrumb-item"><a href="/industries.html">Industries</a></li>
-					  <li class="breadcrumb-item"><a href="/applications.html">Metals</a></li>
-					  <li class="breadcrumb-item"><a href="/specific-products.html">Rod Wire</a></li>
+					  <li class="breadcrumb-item"><a href="/pages-industries/metals.html">Metals</a></li>
+					  <li class="breadcrumb-item"><a href="/pages-industries/pages-metals/cold-coil.html">Rod Wire</a></li>
 					  <li class="breadcrumb-item active" aria-current="page"><a><b>Apex Steel Strapping</b></a></li>
 					</ol>
 				  </nav>
@@ -92,7 +92,7 @@
 
 					<!-- image -->
 					<div class="col-md-6 order-md-1">
-						<img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto rounded" src="images/apex-steel-strapping.png" width="500" height="500" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"></img>
+						<img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto rounded" src="/images/apex-steel-strapping.png" width="500" height="500" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"></img>
 					</div>
 				</div>
 
@@ -138,7 +138,7 @@
 			<div>
 				<h2 class="heading">Solution group</h2>
 				<hr>
-				<img src="images/solutions-group.png" class="img-fluid" alt="">
+				<img src="/images/solutions-group.png" class="img-fluid" alt="">
 			</div>
 			<br><br><br><br>
 
@@ -188,7 +188,7 @@
 
 					<!-- Gallery item -->
 					<div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-						<div class="bg-white rounded shadow-sm"><img src="images/home-page/industries/lumber-and-panelboard.png" alt="" class="img-fluid card-img-top">
+						<div class="bg-white rounded shadow-sm"><img src="/images/home-page/industries/lumber-and-panelboard.png" alt="" class="img-fluid card-img-top">
 						<div class="p-4">
 							<h5> <a href="#" class="gallery-title">Magnus</a></h5>
 							<p class="gallery-description">Magnus is a cold-rolled, heat-treated steel strapping that provides high tensile strength and shock resistance for the heaviest-duty applications.</p>
@@ -198,7 +198,7 @@
 					
 					<!-- Gallery item -->
 					<div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-						<div class="bg-white rounded shadow-sm"><img src="images/home-page/industries/corrugated.png" alt="" class="img-fluid card-img-top">
+						<div class="bg-white rounded shadow-sm"><img src="/images/home-page/industries/corrugated.png" alt="" class="img-fluid card-img-top">
 							<div class="p-4">
 								<h5> <a href="#" class="gallery-title">Pallet frame</a></h5>
 								<p class="gallery-description">Magnus is a cold-rolled, heat-treated steel strapping that provides high tensile strength and shock resistance for the heaviest-duty applications.</p>
@@ -209,7 +209,7 @@
 						
 						<!-- Gallery item -->
 						<div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-							<div class="bg-white rounded shadow-sm"><img src="images/home-page/industries/production-and-logistics.png" alt="" class="img-fluid card-img-top">
+							<div class="bg-white rounded shadow-sm"><img src="/images/home-page/industries/production-and-logistics.png" alt="" class="img-fluid card-img-top">
 								<div class="p-4">
 									<h5> <a href="#" class="gallery-title">Polyster strapping</a></h5>
 									<p class="gallery-description">Magnus is a cold-rolled, heat-treated steel strapping that provides high tensile strength and shock resistance for the heaviest-duty applications.</p>
@@ -220,7 +220,7 @@
 
 						<!-- Gallery item -->
 					<div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-						<div class="bg-white rounded shadow-sm"><img src="images/home-page/industries/paper-and-graphic-arts.png" alt="" class="img-fluid card-img-top">
+						<div class="bg-white rounded shadow-sm"><img src="/images/home-page/industries/paper-and-graphic-arts.png" alt="" class="img-fluid card-img-top">
 							<div class="p-4">
 								<h5> <a href="#" class="gallery-title">Angleboard</a></h5>
 								<p class="gallery-description">Magnus is a cold-rolled, heat-treated steel strapping that provides high tensile strength and shock resistance for the heaviest-duty applications.</p>
