--- a/pages-industries/bagged-products.html
+++ b/pages-industries/bagged-products.html
@@ -82,7 +82,7 @@
 				<!-- Gallery item -->
 				<div class="col-xl-3 col-lg-4 col-md-6 mb-4">
 					<div class="bg-white rounded shadow-sm application-button">
-						<a href=""><a href=""><img src="../images/bagged-page/cement.svg" alt="" href="" class="img-fluid card-img-top"></a>
+						<a href=""><a href=""><img src="/images/bagged-page/cement.svg" alt="" href="" class="img-fluid card-img-top"></a>
 					  <div class="p-4">
 						<h5> <a href="#" class="gallery-text">Cement</a></h5>
 					  </div>
@@ -92,7 +92,7 @@
 				  <!-- Gallery item -->
 				  <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
 					  <div class="bg-white rounded shadow-sm application-button">
-						  <a href="specific-products.html"><img src="../images/bagged-page/horticulture.svg" alt="" class="img-fluid card-img-top"></a>
+						  <a href="specific-products.html"><img src="/images/bagged-page/horticulture.svg" alt="" class="img-fluid card-img-top"></a>
 						<div class="p-4">
 						  <h5> <a href="specific-products.html" class="gallery-text">Horticulture</a></h5>
 						</div>
@@ -102,7 +102,7 @@
 					<!-- Gallery item -->
 				<div class="col-xl-3 col-lg-4 col-md-6 mb-4">
 					<div class="bg-white rounded shadow-sm application-button">
-						<a href=""><a href=""><img src="../images/bagged-page/milled.svg" alt="" href="" class="img-fluid card-img-top"></a>
+						<a href=""><a href=""><img src="/images/bagged-page/milled.svg" alt="" href="" class="img-fluid card-img-top"></a>
 					  <div class="p-4">
 						<h5> <a href="#" class="gallery-text">Milled Products</a></h5>
 					  </div>
@@ -112,7 +112,7 @@
 				  <!-- Gallery item -->
 				  <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
 					  <div class="bg-white rounded shadow-sm application-button">
-						  <a href="specific-products.html"><img src="../images/bagged-page/pet-food.svg" alt="" class="img-fluid card-img-top"></a>
+						  <a href="specific-products.html"><img src="/images/bagged-page/pet-food.svg" alt="" class="img-fluid card-img-top"></a>
 						<div class="p-4">
 						  <h5> <a href="specific-products.html" class="gallery-text">Pet Food</a></h5>
 						</div>
@@ -122,7 +122,7 @@
 					<!-- Gallery item -->
 				<div class="col-xl-3 col-lg-4 col-md-6 mb-4">
 					<div class="bg-white rounded shadow-sm application-button">
-						<a href=""><a href=""><img src="../images/bagged-page/resin.svg" alt="" href="" class="img-fluid card-img-top"></a>
+						<a href=""><a href=""><img src="/images/bagged-page/resin.svg" alt="" href="" class="img-fluid card-img-top"></a>
 					  <div class="p-4">
 						<h5> <a href="#" class="gallery-text">Resin</a></h5>
 					  </div>
