--- a/pages-industries/fiber-and-textile.html
+++ b/pages-industries/fiber-and-textile.html
@@ -13,7 +13,7 @@
 		<script src="https://kit.fontawesome.com/065b6a01b6.js" crossorigin="anonymous"></script>
 
 		<!-- external stylesheet -->
-		<link rel="stylesheet" href="../css/styles-applications-page.css" />
+		<link rel="stylesheet" href="/css/styles-applications-page.css" />
 
 		<!-- JQuery -->
         <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
@@ -22,9 +22,9 @@
 
         <script>
             $(function(){
-                $('#navbar-one').load('../partials/navbar-one.html');
-                $('#navbar-two').load('../partials/navbar-two.html');
-                $('#footer').load('../partials/footer.html');
+                $('#navbar-one').load('/partials/navbar-one.html');
+                $('#navbar-two').load('/partials/navbar-two.html');
+                $('#footer').load('/partials/footer.html');
             });
         </script>
     </head>
@@ -52,7 +52,7 @@
 				<!-- breadcrumb -->
 				  <nav aria-label="breadcrumb">
 					<ol class="breadcrumb">
-					  <li class="breadcrumb-item"><a href="../industries.html">Industries</a></li>
+					  <li class="breadcrumb-item"><a href="/industries.html">Industries</a></li>
 					  <li class="breadcrumb-item active" aria-current="page"><a><b>Fiber & Texture</b></a></li>
 					</ol>
 				  </nav>
@@ -82,7 +82,7 @@
 				<!-- Gallery item -->
 				<div class="col-xl-3 col-lg-4 col-md-6 mb-4">
 					<div class="bg-white rounded shadow-sm application-button">
-						<a href=""><a href=""><img src="../images/fiber-page/cotton.svg" alt="" href="" class="img-fluid card-img-top"></a>
+						<a href=""><a href=""><img src="/images/fiber-page/cotton.svg" alt="" href="" class="img-fluid card-img-top"></a>
 					  <div class="p-4">
 						<h5> <a href="#" class="gallery-text">Cotton</a></h5>
 					  </div>
@@ -92,7 +92,7 @@
 				  <!-- Gallery item -->
 				  <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
 					  <div class="bg-white rounded shadow-sm application-button">
-						  <a href="specific-products.html"><img src="../images/fiber-page/hay.svg" alt="" class="img-fluid card-img-top"></a>
+						  <a href="specific-products.html"><img src="/images/fiber-page/hay.svg" alt="" class="img-fluid card-img-top"></a>
 						<div class="p-4">
 						  <h5> <a href="specific-products.html" class="gallery-text">Hay</a></h5>
 						</div>
@@ -103,7 +103,7 @@
 					<!-- Gallery item -->
 				<div class="col-xl-3 col-lg-4 col-md-6 mb-4">
 				  <div class="bg-white rounded shadow-sm application-button">
-					  <a href=""><img src="../images/fiber-page/man-made.svg" alt="" href="" class="img-fluid card-img-top"></a>
+					  <a href=""><img src="/images/fiber-page/man-made.svg" alt="" href="" class="img-fluid card-img-top"></a>
 					<div class="p-4">
 					  <h5> <a href="#" class="gallery-text">Man-made Fiber</a></h5>
 					</div>
@@ -113,7 +113,7 @@
 				<!-- Gallery item -->
 				<div class="col-xl-3 col-lg-4 col-md-6 mb-4">
 					<div class="bg-white rounded shadow-sm application-button">
-						<a href=""><img src="../images/fiber-page/other.svg" alt="" href="" class="img-fluid card-img-top"></a>
+						<a href=""><img src="/images/fiber-page/other.svg" alt="" href="" class="img-fluid card-img-top"></a>
 					  <div class="p-4">
 						<h5> <a href="#" class="gallery-text">Other</a></h5>
 					  </div>
@@ -124,7 +124,7 @@
 						<!-- Gallery item -->
 				<div class="col-xl-3 col-lg-4 col-md-6 mb-4">
 					<div class="bg-white rounded shadow-sm application-button">
-						<a href=""><img src="../images/fiber-page/other-natural.svg" alt="" href="" class="img-fluid card-img-top"></a>
+						<a href=""><img src="/images/fiber-page/other-natural.svg" alt="" href="" class="img-fluid card-img-top"></a>
 					  <div class="p-4">
 						<h5> <a href="#" class="gallery-text">Other Natural Fibers</a></h5>
 					  </div>
