--- a/pages-industries/food.html
+++ b/pages-industries/food.html
@@ -13,7 +13,7 @@
 		<script src="https://kit.fontawesome.com/065b6a01b6.js" crossorigin="anonymous"></script>
 
 		<!-- external stylesheet -->
-		<link rel="stylesheet" href="../css/styles-applications-page.css" />
+		<link rel="stylesheet" href="/css/styles-applications-page.css" />
 
 		<!-- JQuery -->
         <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
@@ -22,9 +22,9 @@
 
         <script>
             $(function(){
-                $('#navbar-one').load('../partials/navbar-one.html');
-                $('#navbar-two').load('../partials/navbar-two.html');
-                $('#footer').load('../partials/footer.html');
+                $('#navbar-one').load('/partials/navbar-one.html');
+                $('#navbar-two').load('/partials/navbar-two.html');
+                $('#footer').load('/partials/footer.html');
             });
         </script>
     </head>
@@ -82,7 +82,7 @@
 				<!-- Gallery item -->
 				<div class="col-xl-3 col-lg-4 col-md-6 mb-4">
 					<div class="bg-white rounded shadow-sm application-button">
-						<a href=""><img src="../images/food-page/boxed-products.svg" alt="" href="" class="img-fluid card-img-top"></a>
+						<a href=""><img src="/images/food-page/boxed-products.svg" alt="" href="" class="img-fluid card-img-top"></a>
 					  <div class="p-4">
 						<h5> <a href="#" class="gallery-text">Boxed Products</a></h5>
 					  </div>
@@ -92,7 +92,7 @@
 				  <!-- Gallery item -->
 				  <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
 					  <div class="bg-white rounded shadow-sm application-button">
-						  <a href=""><img src="../images/food-page/dairy.svg" alt="" href="" class="img-fluid card-img-top"></a>
+						  <a href=""><img src="/images/food-page/dairy.svg" alt="" href="" class="img-fluid card-img-top"></a>
 						<div class="p-4">
 						  <h5> <a href="#" class="gallery-text">Dairy</a></h5>
 						</div>
@@ -103,7 +103,7 @@
 					<!-- Gallery item -->
 					<div class="col-xl-3 col-lg-4 col-md-6 mb-4">
 						<div class="bg-white rounded shadow-sm application-button">
-							<a href=""><img src="../images/food-page/fish.svg" alt="" href="" class="img-fluid card-img-top"></a>
+							<a href=""><img src="/images/food-page/fish.svg" alt="" href="" class="img-fluid card-img-top"></a>
 						  <div class="p-4">
 							<h5> <a href="#" class="gallery-text">Fish and Seafood</a></h5>
 						  </div>
@@ -114,7 +114,7 @@
 					  <!-- Gallery item -->
 				  <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
 					  <div class="bg-white rounded shadow-sm application-button">
-						  <a href=""><a href=""><img src="../images/food-page/frozen.svg" alt="" href="" class="img-fluid card-img-top"></a>
+						  <a href=""><a href=""><img src="/images/food-page/frozen.svg" alt="" href="" class="img-fluid card-img-top"></a>
 						<div class="p-4">
 						  <h5> <a href="#" class="gallery-text">Frozen</a></h5>
 						</div>
@@ -124,7 +124,7 @@
 					<!-- Gallery item -->
 					<div class="col-xl-3 col-lg-4 col-md-6 mb-4">
 						<div class="bg-white rounded shadow-sm application-button">
-							<a href="specific-products.html"><img src="../images/food-page/fruit.svg" alt="" class="img-fluid card-img-top"></a>
+							<a href="specific-products.html"><img src="/images/food-page/fruit.svg" alt="" class="img-fluid card-img-top"></a>
 						  <div class="p-4">
 							<h5> <a href="specific-products.html" class="gallery-text">Fruit and Vegetable</a></h5>
 						  </div>
@@ -135,7 +135,7 @@
 					  <!-- Gallery item -->
 				  <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
 					<div class="bg-white rounded shadow-sm application-button">
-						<a href=""><img src="../images/food-page/grocery.svg" alt="" href="" class="img-fluid card-img-top"></a>
+						<a href=""><img src="/images/food-page/grocery.svg" alt="" href="" class="img-fluid card-img-top"></a>
 					  <div class="p-4">
 						<h5> <a href="#" class="gallery-text">Grocery</a></h5>
 					  </div>
@@ -145,7 +145,7 @@
 				  <!-- Gallery item -->
 				  <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
 					  <div class="bg-white rounded shadow-sm application-button">
-						  <a href=""><img src="../images/food-page/meat.svg" alt="" href="" class="img-fluid card-img-top"></a>
+						  <a href=""><img src="/images/food-page/meat.svg" alt="" href="" class="img-fluid card-img-top"></a>
 						<div class="p-4">
 						  <h5> <a href="#" class="gallery-text">Meat and Poultry</a></h5>
 						</div>
@@ -156,7 +156,7 @@
 						  <!-- Gallery item -->
 				  <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
 					  <div class="bg-white rounded shadow-sm application-button">
-						  <a href=""><img src="../images/food-page/snack.svg" alt="" href="" class="img-fluid card-img-top"></a>
+						  <a href=""><img src="/images/food-page/snack.svg" alt="" href="" class="img-fluid card-img-top"></a>
 						<div class="p-4">
 						  <h5> <a href="#" class="gallery-text">Snack Foods</a></h5>
 						</div>
